      po/da.po, po/de.po, po/el.po, po/en_AU.po, po/en_GB.po, po/es.po,
      po/fi.po, po/fr.po, po/he.po, po/hu.po, po/id.po, po/it.po,
      po/ja.po (new), po/nb.po, po/nl.po, po/pl.po, po/pt_BR.po, po/pt.po,
      po/ru.po, po/sk.po, po/sl.po, po/sr.po, po/sv.po, po/tl.po,
      po/ur.po (new), po/zh_CN.po
    - thanks to all contributors: https://translations.launchpad.net/ufw

 -- Jamie Strandboge <jamie@ubuntu.com>  Mon, 05 Mar 2012 09:56:56 -0600

ufw (0.30.1) RELEASED; urgency=low

  * allow for python 2.7 (verified to work with python 2.7.1)
  * fix improper display of error messages. Patch thanks to Serguey Basalaev
    (LP: #580032)
  * profiles/ufw-mailserver: remove Postfix reference
  * fix typo in warning (LP: #637876)
  * fix manpage reference to /etc/default/ufw (Closes: 601111)
  * mention quoting of application profile names with spaces (LP: #715676)
  * fix man-page hyphenation in ufw.8
  * run_tests.sh: adjust PATH if iptables can't be found
  * adjust /etc/ufw/sysctl.conf to have commented out entries for ipv6 privacy
    addressing
  * profiles/ufw-fileserver: add svnserve profile (LP: #501140)
  * use 'UFW AUDIT INVALID' for INVALID packets in medium and higher
  * DROP packets with RH0 headers (LP: #740249)
  * update README to discuss the default ruleset
  * only allow mDNS multicast (LP: #740256)
  * allow ping replies from multicast (LP: #720605)

 -- Jamie Strandboge <jamie@ubuntu.com>  Tue, 22 Mar 2011 12:06:10 -0500

ufw (0.30) RELEASED; urgency=low

  * add example Upstart script
  * error out when filesystem is read-only (LP: #430053)
  * catch exception if can't find parent pid when refreshing application
    profiles (LP: #424528)
  * update manpage to clarify 'show' command (LP: #453083)
  * update setup.py to use sys.executable and cleanup required binaries
  * update test suite
    - better handle iptables < 1.4 (tested with 1.3.8)
    - allow alternate interpreter
  * write loglevel rules to user rules (LP: #459925)