@@ -33,6 +33,8 @@ ufw (0.31) UNRELEASED; urgency=low
       po/ru.po, po/sk.po, po/sl.po, po/sr.po, po/sv.po, po/tl.po,
       po/ur.po (new), po/zh_CN.po
     - thanks to all contributors: https://translations.launchpad.net/ufw
+  * allow multiple interface matching via '+'. Thanks to Oliver Hookins.
+    (LP: #611838)
 
  -- Jamie Strandboge <jamie@ubuntu.com>  Mon, 05 Mar 2012 09:56:56 -0600
 
